Fixed secondbar (title bar when looking at details bar) spacing

--- a/src/css/partials/molecules/_secondbar.scss
+++ b/src/css/partials/molecules/_secondbar.scss
@@ -1,30 +1,27 @@
 .view-topper {
-    line-height: 0;
     @extend .shadow-z-2-no-top;
 }
 
 .second-bar {
-    width: 100%;
-//    z-index: 3;  
-    min-height: 48px;
     background-color: $tabs-background-color;
-    text-align: center;
-    padding-bottom: 1px; // As menu items have 1px border, this makes the second-bar line up with the menu items.
+    padding: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 @include medium {
     .view-topper-details-advice .second-bar, 
     .view-topper-details-drugs .second-bar {
-        min-height: 96px;
+        //min-height: 96px;
     }
 }
 
 .second-bar-title {
-    display: inline-block;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: normal;
     margin: 0;
-    padding: 0 16px;
-    line-height: 48px;
+    padding: 0.9rem;
+
     font-weight: 300;
 }
